[package]
name = "fm_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "*"}
tokio = {version = "*",features = ["full"]}
anyhow = {version = "*"}
serde = {version =  "*", features = ["derive"]}
serde_json = {version = "*"}
regex = {version = "*"}
sqlx = {version = "*",features = ["runtime-tokio","sqlite"]}